[gd_scene load_steps=6 format=2]

[ext_resource path="res://Asset/Miscellaneous Asset/Settings GUI/Settings_Background.png" type="Texture" id=1]
[ext_resource path="res://Asset/Miscellaneous Asset/ChiKareGo2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/Miscellaneous Script/Settings Script/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Settings" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 72.0
margin_right = 568.0
margin_bottom = 288.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 128.0
margin_top = 136.0
margin_right = 512.0
margin_bottom = 152.0
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MusicSlider"]
margin_top = -16.0
margin_right = 40.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "Music"

[node name="SFXSlider" type="HSlider" parent="."]
anchor_left = 0.2
anchor_top = 0.533
anchor_right = 0.2
anchor_bottom = 0.533
margin_left = 128.0
margin_top = 176.0
margin_right = 512.0
margin_bottom = 192.0
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="SFXSlider"]
margin_top = -16.0
margin_right = 40.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "Sound FX"

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
anchor_left = 0.2
anchor_top = 0.711
anchor_right = 0.237
anchor_bottom = 0.778
margin_left = 128.0
margin_top = 216.0
margin_right = 152.0
margin_bottom = 240.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CheckBox"]
margin_top = -16.0
margin_right = 118.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )
text = "On/Off Vibrations"

[node name="TitleButton" type="Button" parent="."]
margin_left = 424.0
margin_top = 216.0
margin_right = 511.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 40, 16 )
text = "Title Screen"

[node name="Close" type="Button" parent="."]
visible = false
margin_left = 496.0
margin_top = 240.0
margin_right = 560.0
margin_bottom = 300.0
text = "Close"

[node name="Button" type="Button" parent="."]
margin_left = 328.0
margin_top = 216.0
margin_right = 409.0
margin_bottom = 272.0
text = "Music Test"

[node name="Button2" type="Button" parent="."]
margin_left = 232.0
margin_top = 216.0
margin_right = 313.0
margin_bottom = 272.0
text = "SFX Test"

[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="TitleButton" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
